--- a/COMP1004-W2017-MovieBonanza/COMP1004-W2017-MovieBonanza.csproj
+++ b/COMP1004-W2017-MovieBonanza/COMP1004-W2017-MovieBonanza.csproj
@@ -66,6 +66,9 @@
     <Compile Include="StreamFrom.Designer.cs">
       <DependentUpon>StreamFrom.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="OrderForm.resx">
+      <DependentUpon>OrderForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -77,6 +80,9 @@
     </Compile>
     <EmbeddedResource Include="SelectionForm.resx">
       <DependentUpon>SelectionForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StreamFrom.resx">
+      <DependentUpon>StreamFrom.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
